--- a/templates/technologyused.html
+++ b/templates/technologyused.html
@@ -31,9 +31,10 @@
             and performing other <span>mathematical calculations</span> on <span>feed-forward network.</span>
         </p>
         <br>
-        <p>While the crop recommendation tasks will be done <span>by a Machine Learning algorithm which will recommend best crop from
-          the database according to the given conditions</span> entered by the user. The Machine Learning model is a simple <span>k-nearest
-          neighbors approach</span> with cosine similarity as metric with additional weightage assigned to features for best prediction.
+        <p>While the crop recommendation tasks will be done <span>by a self-designed algorithm which recommends best crop from
+          the database according to the given conditions</span> entered by the user. The <span>self-designed algorithem</span>
+          consists of a metric system which is capable of calculating similarity score between user input and the crops in the database
+          with additional weightage assigned to features for best prediction.
         </p>
 
     </div>
